test/regress/cov3-annotate-missing-close-paren.test
; Test error for missing closing parenthesis in tag annotation
; Covers annotate.cc lines 209-210 (missing closing parenthesis)

2024/01/01 Test
    Assets:Brokerage    10 AAPL (lot-x
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Assets:Brokerage    10 AAPL (lot-x
                      ^^^^^^^^^^^^^^
Error: Commodity tag lacks closing parenthesis
end test
